fix article word-wrap

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -51,6 +51,7 @@ a {
 article {
   font-size: 1em;
   line-height: 160%;
+  word-wrap: break-word;
 
   * {
     line-height: 160%;
